// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpirySelector should render the selector for a carnet 1`] = `
<div
  className="govuk-input__wrapper expiry-selector-wrapper"
>
  <FormElementWrapper
    addFormGroupError={true}
    errorClass="govuk-input--error"
    errorId="test-quantity-id"
    errors={Array []}
    hideText={true}
  >
    <input
      aria-describedby=""
      className="govuk-input govuk-input--width-3"
      defaultValue=""
      id="test-quantity-id"
      name="testQuantityName"
      type="text"
    />
  </FormElementWrapper>
  <FormElementWrapper
    errorClass="govuk-select--error"
    errorId="test-unit-id"
    errors={Array []}
    hideText={true}
  >
    <select
      className="govuk-select govuk-select--width-3 expiry-selector-units"
      defaultValue=""
      id="test-unit-id"
      name="testUnitName"
    >
      <option
        disabled={true}
        value=""
      >
        Select One
      </option>
      <option
        value="hour"
      >
        Hours
      </option>
      <option
        value="day"
      >
        Days
      </option>
      <option
        value="week"
      >
        Weeks
      </option>
      <option
        value="month"
      >
        Months
      </option>
      <option
        value="year"
      >
        Years
      </option>
      <option
        value="no expiry"
      >
        No expiry
      </option>
    </select>
  </FormElementWrapper>
</div>
`;

exports[`ExpirySelector should render the selector for a non-carnet 1`] = `
<div
  className="govuk-input__wrapper expiry-selector-wrapper"
>
  <FormElementWrapper
    addFormGroupError={true}
    errorClass="govuk-input--error"
    errorId="test-quantity-id"
    errors={Array []}
    hideText={true}
  >
    <input
      aria-describedby=""
      className="govuk-input govuk-input--width-3"
      defaultValue=""
      id="test-quantity-id"
      name="testQuantityName"
      type="text"
    />
  </FormElementWrapper>
  <FormElementWrapper
    errorClass="govuk-select--error"
    errorId="test-unit-id"
    errors={Array []}
    hideText={true}
  >
    <select
      className="govuk-select govuk-select--width-3 expiry-selector-units"
      defaultValue=""
      id="test-unit-id"
      name="testUnitName"
    >
      <option
        disabled={true}
        value=""
      >
        Select One
      </option>
      <option
        value="hour"
      >
        Hours
      </option>
      <option
        value="day"
      >
        Days
      </option>
      <option
        value="week"
      >
        Weeks
      </option>
      <option
        value="month"
      >
        Months
      </option>
      <option
        value="year"
      >
        Years
      </option>
    </select>
  </FormElementWrapper>
</div>
`;
